--- a/test.yml
+++ b/test.yml
@@ -8,7 +8,7 @@
         copy:
            src: /var/lib/jenkins/workspace/ansible/web/target/time-tracker-web-0.5.0-SNAPSHOT.war
      #      src: "{{ item }}"
-           dest: /opt/tomcat
+           dest: /opt/
    ### below comand is for transfer multiple files which ending with .war
    #     with_fileglob:
    #        - /var/lib/jenkins/workspace/ansible/web/target/*.war
